--- a/estilo.css
+++ b/estilo.css
@@ -158,7 +158,7 @@ nav a{
     content: "";
   display: block;
   border-bottom: 1px solid #000; /* Cor e estilo da linha */
-  border-bottom: 2px outset gold;
+  border-bottom: 2px outset #F6A702;
   width: 50%; /* Ajuste a largura conforme necessário */
   position: absolute;
   bottom: 0;
@@ -174,17 +174,15 @@ footer{
 }
 
 #partefooter{
-    max-width: 40vw;
+    max-width: 50vw;
+    padding: 1.5rem;
 }
 
 .foot{
     display: flex;
     padding: 0.5rem;
+    gap: 1.5rem;
 }
-
-
-
-
 
 /* HOVER */
 
@@ -206,16 +204,34 @@ footer{
     }
     .eventos{
         padding-top: 0.5rem;
-        width: auto;
+        width: 100%;
     }
-    .descricao p{
+    .descricao{
         flex-wrap: wrap;
+        max-width: 45vw;
     }
     .eventounit{
         height: 20vh;
         width: 100%;
+        gap: 0.5rem;
+        padding: 0.5rem;
     }
-
+    #partefooter{
+        max-width: 100vw;
+    }
+    .imagem{
+        width: 15rem;
+        height: 8rem;
+    }
+    .descricao p:nth-child(1){
+        font-size: 0.8rem;
+    }
+    .descricao p:nth-child(2){
+        font-size: 0.5rem;
+    }
+    #populares{
+        padding: 1.5rem;
+    }
   }
 
   body{
