--- a/estilo3.css
+++ b/estilo3.css
@@ -67,5 +67,26 @@ input#btnc{
     input#custoev{
         margin: 0;
     }
+    #b3{
+        width: 100vw;
+        height: auto;
+    }
+    #a3{
+        width: 100vw;
+        height: 100vh;
+    }
+    .texto{
+        margin: 0;
+        color: black;
+        font-size: 0.8rem;
+        padding-top: 0.5rem;
+    }
+    #b3{
+        height: auto;
+        margin: 0;
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+    }
 
 }
