--- a/estilo.css
+++ b/estilo.css
@@ -43,8 +43,12 @@ nav a{
 
 .nav-list{
     display: flex;
-    list-style: none;
-    gap: 1.5rem;
+    opacity: 100%;
+    transition: opacity 0.3s ease;;
+}
+
+.nav-list:hover{
+    opacity: 70%;
 }
 
 /* CAPA TEATRO BOLSHOI*/
