--- a/estilo3.css
+++ b/estilo3.css
@@ -51,10 +51,14 @@ input#btnc{
 }
 
 #b3 {
-    margin-left: 26rem;
-    margin-top: 2rem;
+    display: flex;
+    margin: auto 0;
+    justify-content: center;
 }
 
+p.texto{
+    width: 40vw;
+}
 /* media query*/
 
 @media (max-width: 768px) {
@@ -75,18 +79,21 @@ input#btnc{
         width: 100vw;
         height: 100vh;
     }
-    .texto{
-        margin: 0;
-        color: black;
-        font-size: 0.8rem;
-        padding-top: 0.5rem;
-    }
+
     #b3{
         height: auto;
         margin: 0;
         width: 100vw;
         display: flex;
         justify-content: center;
+    }
+
+    P.texto{
+        margin: 0;
+        color: black;
+        font-size: 0.7rem;
+        padding-top: 0.5rem;
+        width: 80vw;
     }
 
 }
