--- a/estilo.css
+++ b/estilo.css
@@ -133,7 +133,7 @@ nav a{
     background-color: #101920;
     display: flex;
     width: 100vw; /* A seção ocupa 100% da largura */
-    min-height: 100vh;
+    /* min-height: 100vh; */
     height: auto;
     flex-direction: column;
     box-sizing: border-box;
@@ -147,13 +147,14 @@ nav a{
     flex-direction: column;
     background-color: #101920;
     justify-content: center;
-    min-height: 100vh;
+    /* min-height: 100vh; */
+    margin-bottom: 1rem;
 }
 
 #populares>p{
     font-size: 1.5rem;
     color: white;
-    
+    margin-bottom: 2.5rem;
     position: relative;
     max-width: 20%;
 }
